Fix Section2 image placeholder to prevent layout shift

--- a/vite-project/src/components/Section2.css
+++ b/vite-project/src/components/Section2.css
@@ -31,14 +31,15 @@
 
 .section2-new-image-wrapper {
   width: 100%;
-  height: 320px;
+  height: 360px;
   margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  position: relative;
 }
 
 .section2-extra-image {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
   max-height: 100%;
   border-radius: 50px;
